--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rainer-portfolio",
+  "name": "rainer_portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,24 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^11.16.1",
-    "hamburger-react": "^2.5.2",
-    "next": "15.1.4",
+    "aos": "^3.0.0-beta.6",
+    "next": "^15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "styled-components": "^6.1.14"
+    "react-multi-carousel": "^2.8.5"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/styled-components": "^5.1.34",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.4",
+    "@types/aos": "^3.0.7",
+    "@types/node": "20.17.12",
+    "@types/react": "18.3.18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.7.3"
   }
 }
