--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.19.1",
+    "@typescript-eslint/parser": "^8.19.1",
     "aos": "^3.0.0-beta.6",
     "next": "^15.1.4",
     "react": "^19.0.0",
@@ -21,7 +23,7 @@
     "@types/node": "20.17.12",
     "@types/react": "18.3.18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "eslint": "^9.17.0",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
