--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
+    "@vercel/speed-insights": "^1.1.0",
     "aos": "^3.0.0-beta.6",
     "next": "^15.1.4",
     "react": "^19.0.0",
