--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-multi-carousel": "^2.8.5",
+    "react-router-dom": "^7.1.1",
     "swiper": "^11.2.0"
   },
   "devDependencies": {
