chore: reorganizar a estrutura do projeto
chore: reorganize project structure and update directories

- Reestruturado o projeto separando os diretórios `frontend` e `backend`.
- Atualizadas as dependências e corrigidos erros de importação.
- Removidos arquivos e configurações antigas, como o `next.config.js`.

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,15 @@ yarn-error.log*
 next-env.d.ts
 
 Zone.Identifier
+
+# Ignorar arquivos de node_modules em qualquer diretório
+node_modules/
+
+# Ignorar arquivos de cache do Next.js
+.next/
+
+# Ignorar arquivos temporários e logs
+*.log
+
+# Ignorar arquivos grandes
+*.pack
