--- a/package.json
+++ b/package.json
@@ -1,35 +1,6 @@
 {
-  "name": "rainer_portfolio",
-  "version": "0.1.0",
-  "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^8.19.1",
-    "@typescript-eslint/parser": "^8.19.1",
-    "@vercel/speed-insights": "^1.1.0",
-    "aos": "^3.0.0-beta.6",
-    "next": "^15.1.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0",
-    "react-multi-carousel": "^2.8.5",
-    "react-router-dom": "^7.1.1",
-    "swiper": "^11.2.0"
-  },
-  "devDependencies": {
-    "@types/aos": "^3.0.7",
-    "@types/node": "20.17.12",
-    "@types/react": "18.3.18",
-    "@types/react-dom": "^18",
-    "eslint": "^9.17.0",
-    "eslint-config-next": "15.0.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "5.7.3"
+    "start:frontend": "npm run dev --prefix frontend",
+    "start:backend": "npm start --prefix backend"
   }
 }
