--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
+    "@types/react": "19.0.7",
     "aos": "^2.3.4",
     "react-icons": "^5.4.0",
     "typescript": "^5.7.3"
