--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "@types/aos": "^3.0.7",
     "@types/react": "19.0.7",
     "aos": "^2.3.4",
+    "eslint": "^9.18.0",
+    "eslint-config-next": "^15.1.5",
     "react-icons": "^5.4.0",
     "typescript": "^5.7.3"
   }
