--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,23 @@
 {
-  "name": "backend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "nodemon server.js", 
-    "start": "node server.js" 
-  },
-  "dependencies": {
-    "express": "^4.21.2",
-    "cors": "^2.8.5"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
-  }
+    "name": "rainer-portfolio-backend",
+    "version": "1.0.0",
+    "main": "src/main.ts",
+    "scripts": {
+        "start": "cross-env PORT=4000 ts-node src/main.ts"
+    },
+    "dependencies": {
+        "@aws-sdk/client-dynamodb": "^3.731.1",
+        "@aws-sdk/lib-dynamodb": "^3.731.1",
+        "@nestjs/common": "^11.0.3",
+        "@nestjs/core": "^11.0.3",
+        "@nestjs/platform-express": "^11.0.3",
+        "aws-sdk": "^2.1000.0",
+        "dotenv": "^10.0.0",
+        "rxjs": "^7.8.1",
+        "typescript": "^4.9.5"
+    },
+    "devDependencies": {
+        "ts-node": "^10.9.2",
+        "cross-env": "^7.0.3"
+    }
 }
