--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "frontend",
+  "name": "rainer-portfolio-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "cross-env PORT=3001 next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -24,6 +24,7 @@
     "eslint": "^9.18.0",
     "eslint-config-next": "^15.1.5",
     "react-icons": "^5.4.0",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "cross-env": "^7.0.3"
   }
 }
