--- a/.github/workflows/deploy-vercel.yml
+++ b/.github/workflows/deploy-vercel.yml
@@ -3,7 +3,7 @@ name: Deploy to Vercel
 on:
   push:
     branches:
-      - main  # Ou qualquer branch que você deseja monitorar
+      - main  # Ou qualquer branch que você deseja monitorar.
 
 jobs:
   deploy:
