--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,11 @@
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
+    "@types/aos": "^3.0.7",
     "@types/react": "19.0.7",
     "aos": "^2.3.4",
+    "eslint": "^9.18.0",
+    "eslint-config-next": "^15.1.5",
     "eslint": "^9.18.0",
     "eslint-config-next": "^15.1.5",
     "react-icons": "^5.4.0",
