--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vercel/speed-insights": "^1.1.0",
     "aos": "^2.3.4",
+    "module": "^1.2.5",
     "next": "^15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -19,15 +20,12 @@
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
-    "@types/aos": "^3.0.7",
     "@types/react": "19.0.7",
     "aos": "^2.3.4",
-    "eslint": "^9.18.0",
-    "eslint-config-next": "^15.1.5",
+    "cross-env": "^7.0.3",
     "eslint": "^9.18.0",
     "eslint-config-next": "^15.1.5",
     "react-icons": "^5.4.0",
-    "typescript": "^5.7.3",
-    "cross-env": "^7.0.3"
+    "typescript": "^5.7.3"
   }
 }
