--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -26,6 +26,12 @@
     "paths": {
       "@/*": [
         "src/*"
+      ],
+      "@components/*": [
+        "src/app/components/*"
+      ],
+      "@constants/*": [
+        "src/app/constant/*"
       ]
     }
   },
