--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "scripts": {
     "start:frontend": "npm run dev --prefix frontend",
     "start:backend": "npm start --prefix backend",
-    "start": "concurrently \"npm run start:frontend\" \"npm run start:backend\""
+    "start": "concurrently \"npm run start:frontend\" \"npm run start:backend\"",
+    "build:frontend": "npm run build --prefix frontend",
+    "build:backend": "npm run build --prefix backend",
+    "build": "npm run build:frontend && npm run build:backend"
   },
   "dependencies": {
     "@nestjs/config": "^4.0.0",
