--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -4,7 +4,7 @@
         "target": "ES6",
         "sourceMap": true,
         "outDir": "./dist",
-        "rootDir": "./src",
+        "rootDir": "dynamodb",
         "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
@@ -13,7 +13,7 @@
         "emitDecoratorMetadata": true // Adicione esta linha
     },
     "include": [
-        "src/**/*"
+        "dynamodb/**/*"
     ],
     "exclude": [
         "node_modules"
