--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@vercel/speed-insights": "^1.1.0",
     "aos": "^2.3.4",
-    "module": "^1.2.5",
     "next": "^15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -20,8 +19,8 @@
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
+    "@types/node": "22.12.0",
     "@types/react": "19.0.7",
-    "aos": "^2.3.4",
     "cross-env": "^7.0.3",
     "eslint": "^9.18.0",
     "eslint-config-next": "^15.1.5",
