--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@vercel/speed-insights": "^1.1.0",
     "aos": "^2.3.4",
-    "next": "^15.1.5",
+    "cross-env": "^7.0.3",
+    "dompurify": "^3.2.4",
+    "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-multi-carousel": "^2.8.5",
-    "tailwindcss": "^3.4.17",
-    "cross-env": "^7.0.3"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
