refactor: adicionar tipo de módulo ao package.json e ajustar dependências em PostList e PostPage [b3c678d]
O código foi refatorado sem alteração de funcionalidade, melhorando a manutenção.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rainer-portfolio-frontend",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "start:dev": "cross-env PORT=3001 next dev --turbopack",
     "build": "next build",
