--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@vercel/speed-insights": "^1.1.0",
     "aos": "^2.3.4",
     "cross-env": "^7.0.3",
