--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@tiptap/starter-kit": "^3.6.6",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "aos": "^2.3.4",
     "aws-amplify": "^6.15.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -90,12 +91,16 @@
     "next-themes": "^0.4.6",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.66.0",
+    "react-icons": "^5.5.0",
+    "react-multi-carousel": "^2.8.6",
     "recharts": "^3.3.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
+    "web-vitals": "^5.1.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -107,6 +112,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/aos": "^3.0.7",
     "@types/node": "^20.19.22",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
