refactor: refatorar melhorar a tipagem e validação em componentes e utilitários [e6179a7]
- Atualizada a configuração do script de preparação no package.json para evitar falhas em ambientes ci e vercel. - Adicionada tipagem TiptapJSON nos componentes PostCard e PostMetadataCard para melhor definição de conteúdo. - Melhorada a validação de propriedades no gancho useAuth para garantir tipos corretos. - Ajustadas funções de compressão e geração de TOC para garantir a manipulação correta de tipos. - Implementadas mensagens de erro mais específicas na biblioteca de validação, ampliando a cobertura de casos de uso.

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "test:coverage": "jest --coverage",
     "test:e2e": "playwright test",
     "clean": "rm -rf .next out dist coverage .turbo node_modules/.cache",
-    "prepare": "husky install"
+    "prepare": "node -e \"if (!process.env.CI && !process.env.VERCEL) { try { require('husky').install(); } catch(e) { } }\""
   },
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.913.0",
