refactor: atualizar configurações de testes e remover arquivos obsoletos [cf3d5dd]
- Atualizado o .gitignore para ignorar resultados de testes temporários e manter a estrutura de diretórios. - Alterado o caminho de diretório de cobertura no jest.config.js para refletir a nova estrutura de resultados de testes. - Removidos arquivos de log de erros e saída de desenvolvimento que não são mais necessários. - Adicionadas novas palavras ao cspell.json para melhorar a verificação ortográfica. - Atualizadas as configurações de testes E2E para garantir melhor organização e legibilidade do código.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,17 @@ node_modules/
 /test-results
 /playwright-report
 
+# Test results - manter estrutura mas ignorar conteúdo temporário
+tests/test-results/coverage/
+tests/test-results/e2e/artifacts/
+tests/test-results/e2e/*.json
+tests/test-results/e2e/*.xml
+tests/test-results/logs/*.log
+tests/test-results/logs/*.log.*
+!tests/test-results/.gitkeep
+!tests/test-results/e2e/.gitkeep
+!tests/test-results/logs/.gitkeep
+
 # next.js
 /.next/
 /out/
