--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/aos": "^3.0.7",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.19.22",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
@@ -131,7 +132,8 @@
     "tailwindcss-animate": "^1.0.7",
     "ts-jest": "^29.4.5",
     "tsx": "^4.20.6",
-    "typescript": "^5"
+    "typescript": "^5",
+    "whatwg-fetch": "^3.6.20"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,css,scss,md}": [
