--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@rainersoft/design-tokens": "^1.0.5",
+    "@rainersoft/design-tokens": "workspace:*",
     "@tailwindcss/postcss": "^4.1.17",
     "@tanstack/react-query": "^5.90.9",
     "@tiptap/extension-code-block-lowlight": "^3.10.7",
