refactor: atualizar autenticação e otimizar componentes de login
- Removido suporte ao login via GitHub, mantendo apenas a autenticação via Google.
- Atualizado o componente OAuthCallbackPage para refletir as mudanças na autenticação.
- Refatorados componentes de login para utilizar o novo botão OAuth.
- Melhorada a gestão de erros em serviços de comentários e autenticação, garantindo mensagens de erro mais informativas.
- Ajustadas as importações e mapeamentos de módulos para a nova estrutura de projeto.

--- a/.env.local.example
+++ b/.env.local.example
@@ -7,7 +7,6 @@
 # - Em produção: https://seu-dominio.com
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
 
-
 # ============================================================================
 # Configuração da Porta API Back-End
 # ============================================================================
@@ -36,3 +35,18 @@ NEXT_PUBLIC_API_MAX_RETRIES=3
 # - Default: 1000 (1 segundo)
 # - Tempo de espera entre cada retry
 NEXT_PUBLIC_API_RETRY_DELAY=1000
+
+# ============================================================================
+# Cloudinary - Imagens Públicas
+# ============================================================================
+# Base usada para montar URLs a partir do publicId salvo no banco
+# Exemplo final: ${NEXT_PUBLIC_CLOUDINARY_BASE_URL}/avatars/{cognitoSub}.webp
+NEXT_PUBLIC_CLOUDINARY_BASE_URL="https://res.cloudinary.com/dkt0xccga/image/upload"
+
+# ============================================================================
+# Modo de Autenticação
+# ============================================================================
+# Forçar uso do AWS Cognito mesmo em desenvolvimento
+# - true: Usa autenticação real via backend/Cognito
+# - false: Usa localAuth (localStorage mock) em desenvolvimento
+NEXT_PUBLIC_FORCE_COGNITO_AUTH=true
