--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "rainer-portfolio-frontend",
   "version": "2.3.0",
@@ -5,7 +6,7 @@
   "description": "Portfólio profissional de Rainer Teixeira - Desenvolvedor Full-Stack",
   "author": "Rainer Teixeira",
   "license": "UNLICENSED",
-  "packageManager": "pnpm@9.0.0",
+  "packageManager": "pnpm@10.24.0",
   "scripts": {
     "dev": "next dev --webpack",
     "prebuild": "node scripts/prepare-workspace.js",
@@ -79,6 +80,7 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.22",
+    "baseline-browser-mapping": "^2.8.32",
     "eslint": "^8.57.1",
     "eslint-config-next": "^16.0.3",
     "husky": "^9.1.7",
@@ -102,7 +104,7 @@
   },
   "pnpm": {
     "overrides": {
-      "@humanwhocodes/config-array": "^0.15.0",
+      "@humanwhocodes/config-array": "^0.13.0",
       "@humanwhocodes/object-schema": "^2.0.3",
       "glob": "^11.0.0",
       "inflight": "npm:inflight@^1.0.6",
