--- a/vercel.json
+++ b/vercel.json
@@ -1,30 +1,16 @@
 {
-  "buildCommand": "pnpm run build",
-  "outputDirectory": ".next",
-  "installCommand": "pnpm install --no-frozen-lockfile",
-  "framework": "nextjs",
-  "nodeVersion": "20.x",
-  "regions": ["iad1"],
-  "env": {
-    "NEXT_PUBLIC_API_URL": "https://rainer-portfolio-backend.onrender.com",
-    "NEXT_PUBLIC_APP_URL": "https://rainer-portfolio.vercel.app"
-  },
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/next"
+    }
+  ],
   "build": {
     "env": {
       "NEXT_PUBLIC_API_URL": "https://rainer-portfolio-backend.onrender.com",
       "NEXT_PUBLIC_APP_URL": "https://rainer-portfolio.vercel.app"
     }
   },
-  "cli": {
-    "versionCheck": false
-  },
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": ".next"
-      }
-    }
-  ]
+  "regions": ["iad1"]
 }
