--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,11 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/next"
-    }
-  ],
   "installCommand": "pnpm install --no-frozen-lockfile",
-  "build": {
-    "env": {
-      "NEXT_PUBLIC_API_URL": "https://rainer-portfolio-backend.onrender.com",
-      "NEXT_PUBLIC_APP_URL": "https://rainer-portfolio.vercel.app"
-    }
-  },
-  "regions": ["iad1"]
+  "buildCommand": "pnpm run build",
+  "outputDirectory": ".next",
+  "framework": "nextjs",
+  "regions": ["iad1"],
+  "env": {
+    "NEXT_PUBLIC_API_URL": "https://rainer-portfolio-backend.onrender.com",
+    "NEXT_PUBLIC_APP_URL": "https://rainer-portfolio.vercel.app"
+  }
 }
