fix: corrigir atualiza configuração de módulos e converte script para CommonJS [8203e6d]
Foi corrigido um problema, melhorando a estabilidade.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "rainer-portfolio-frontend",
   "version": "2.3.0",
   "private": true,
+  "type": "commonjs",
+  "module": "esnext",
   "description": "Portfólio profissional de Rainer Teixeira - Desenvolvedor Full-Stack",
   "author": "Rainer Teixeira",
   "license": "UNLICENSED",
