fix: atualizar localtunnel url para wet-groups-carry.loca.lt [8c77c5d]
- Backend agora rodando na porta 4010 - Nova url do localtunnel gerada e configurada - Pronto para deploy na vercel

--- a/.env.homolog
+++ b/.env.homolog
@@ -8,7 +8,7 @@ NEXT_PUBLIC_BASE_URL=https://rainersoft.com.br
 # Configuração da API Local via ngrok
 # ============================================================================
 # URL base da API exposta via ngrok (substitua pela sua URL do ngrok)
-NEXT_PUBLIC_API_URL=https://smart-bobcats-dance.loca.lt
+NEXT_PUBLIC_API_URL=https://wet-groups-carry.loca.lt
 
 # URL de callback OAuth para produção
 NEXT_PUBLIC_OAUTH_REDIRECT_SIGN_IN=https://rainersoft.com.br/dashboard/login/callback
