fix: corrigir replace rimraf com rm -rf for vercel compatibilidade [e1c90ee]
Foi corrigido um problema, melhorando a estabilidade.

--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "test:tokens:report": "playwright show-report playwright-report/rainer-design-tokens",
     "validate:tokens": "tsx scripts/validate-rainer-design-tokens.ts",
     "test:all": "pnpm run test && pnpm run test:e2e && pnpm run validate:tokens",
-    "clean": "rimraf .next out dist coverage .turbo node_modules/.cache",
-    "clean:all": "pnpm run clean && rimraf node_modules pnpm-lock.yaml",
+    "clean": "rm -rf .next out dist coverage .turbo node_modules/.cache",
+    "clean:all": "pnpm run clean && rm -rf node_modules pnpm-lock.yaml",
     "prepare": "husky || true",
     "version:update": "tsx scripts/08-memoria/update-version.ts",
     "memory:update": "tsx scripts/08-memoria/update-memory.ts",
