--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "Rainer Teixeira",
   "license": "UNLICENSED",
   "packageManager": "pnpm@9.15.9",
+  "buildTimestamp": "2025-12-11T22-23-00",
   "scripts": {
     "dev": "next dev --webpack",
     "prebuild": "node scripts/prepare-workspace.js",
