chore: atualizar usar node clean script for builds
Foram realizadas tarefas de manutenção e organização do projeto.

--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "test:tokens:report": "playwright show-report playwright-report/rainer-design-tokens",
     "validate:tokens": "tsx scripts/validate-rainer-design-tokens.ts",
     "test:all": "pnpm run test && pnpm run test:e2e && pnpm run validate:tokens",
-    "clean": "pnpm exec rimraf .next out dist coverage .turbo \"node_modules/.cache\"",
-    "clean:all": "pnpm run clean && pnpm exec rimraf node_modules pnpm-lock.yaml",
+    "clean": "node scripts/clean.js",
+    "clean:all": "node scripts/clean.js && node -e \"require('fs').rmSync('node_modules', { recursive: true, force: true }); require('fs').rmSync('pnpm-lock.yaml', { force: true });\"",
     "prepare": "husky || true",
     "version:update": "tsx scripts/08-memoria/update-version.ts",
     "memory:update": "tsx scripts/08-memoria/update-memory.ts",
