fix: adicionar webpack alias configuration para resolver paths @ no Vercel

--- a/.vercelignore
+++ b/.vercelignore
@@ -1,18 +1,3 @@
 node_modules
-.next/cache
+.next
 .git
-.github
-dist
-build
-.env*.local
-coverage
-.nyc_output
-.cache
-.parcel-cache
-.tmp
-.temp
-.vscode
-.idea
-*.log
-.DS_Store
-Thumbs.db
