--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
     "@tiptap/extension-table-row": "^3.10.7",
     "@tiptap/react": "^3.10.7",
     "@tiptap/starter-kit": "^3.10.7",
+    "@types/node": "^20.19.25",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "date-fns": "^4.1.0",
@@ -67,6 +70,8 @@
     "recharts": "^3.4.1",
     "tailwindcss": "^4.1.0",
     "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.9.3",
+    "web-vitals": "^5.1.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -79,9 +84,6 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
-    "@types/node": "^20.19.25",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
     "baseline-browser-mapping": "^2.8.32",
     "dotenv": "^17.2.3",
     "eslint": "^8.57.1",
@@ -95,9 +97,7 @@
     "puppeteer": "^24.32.1",
     "rimraf": "^5.0.5",
     "ts-jest": "^29.4.6",
-    "tsx": "^4.21.0",
-    "typescript": "^5.9.3",
-    "web-vitals": "^5.1.0"
+    "tsx": "^4.21.0"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,css,scss,md}": [
