Corrigir erros de prerendering no Next.js
- Adicionar 'use client' em todas as páginas que usam hooks React
- Adicionar export const dynamic = 'force-dynamic' em componentes client
- Configurar output: 'export' no next.config.mjs para build estático
- Corrigir problemas com createContext em SSR
- Adicionar imports do React onde necessário

Resolvido erros de build em:
- /dashboard/login e subpáginas
- /cookies/settings
- /blog e /[slug]
- Páginas de autenticação
- Componentes que usam hooks

Alterações aplicadas em:
- app/**/*.tsx (páginas com hooks)
- components/**/*.tsx (componentes client)
- next.config.mjs (configuração de export)

--- a/package.json
+++ b/package.json
@@ -42,10 +42,11 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@emotion/is-prop-valid": "^1.4.0",
     "@hookform/resolvers": "^5.2.2",
-    "@rainersoft/design-tokens": "file:../rainer-design-tokens",
-    "@rainersoft/ui": "file:../rainer-ui",
-    "@rainersoft/utils": "file:../rainer-utils",
+    "@rainersoft/design-tokens": "^2.8.0",
+    "@rainersoft/ui": "^2.2.0",
+    "@rainersoft/utils": "^1.4.0",
     "@tailwindcss/postcss": "^4.1.0",
     "@tanstack/react-query": "^5.90.9",
     "@tiptap/extension-code-block-lowlight": "^3.10.7",
