--- a/package.json
+++ b/package.json
@@ -58,18 +58,20 @@
     "@tiptap/extension-table-row": "^3.10.7",
     "@tiptap/react": "^3.10.7",
     "@tiptap/starter-kit": "^3.10.7",
-    "@types/node": "^20.19.25",
     "@types/react": "19.2.8",
     "@types/react-dom": "19.2.3",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "autoprefixer": "^10.4.23",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.562.0",
     "next": "^15.1.0",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "qrcode.react": "^4.2.0",
     "react": "19.2.3",
+    "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.66.0",
     "react-loading-indicators": "^1.0.1",
@@ -90,6 +92,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
+    "@types/node": "^20.19.28",
     "baseline-browser-mapping": "^2.8.32",
     "dotenv": "^17.2.3",
     "eslint": "^8.57.1",
@@ -99,7 +102,6 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^16.2.6",
-    "next": "15.1.0",
     "prettier": "^3.6.2",
     "puppeteer": "^24.32.1",
     "rimraf": "^5.0.5",
