--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@emotion/is-prop-valid": "^1.4.0",
     "@hookform/resolvers": "^5.2.2",
-    "@rainersoft/design-tokens": "^2.8.0",
-    "@rainersoft/ui": "^2.2.0",
-    "@rainersoft/utils": "^1.4.0",
+    "@rainersoft/design-tokens": "file:../rainer-design-tokens",
+    "@rainersoft/ui": "file:../rainer-ui",
+    "@rainersoft/utils": "file:../rainer-utils",
     "@tailwindcss/postcss": "^4.1.0",
     "@tanstack/react-query": "^5.90.9",
     "@tiptap/extension-code-block-lowlight": "^3.10.7",
