feat: atualizar dependências

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "description": "Portfólio profissional de Rainer Teixeira - Desenvolvedor Full-Stack",
   "author": "Rainer Teixeira",
   "license": "UNLICENSED",
-  "packageManager": "pnpm@10.28.0",
+  "packageManager": "pnpm@10.28.2+sha512.41872f037ad22f7348e3b1debbaf7e867cfd448f2726d9cf74c08f19507c31d2c8e7a11525b983febc2df640b5438dee6023ebb1f84ed43cc2d654d2bc326264",
   "buildTimestamp": "2025-12-11T22-23-00",
   "scripts": {
     "dev": "next dev -p 3001",
